--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: Toto je pokus od EVAN
-baseURL: https://xyz.netlify.com/
+baseURL: https://gifted-khorana-32cd43.netlify.com
 languageCode: cs-cz
 publishDir: public
 
