--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-title: Toto je pokus od EVAN
+title: Zvíøetník
 baseURL: https://gifted-khorana-32cd43.netlify.com
 languageCode: cs-cz
 publishDir: public
