--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,9 @@ menu:
       identifier: post
       url: /post/
       weight: 20
+    - name: Služby
+      url: /sluzby/
+      weight: 30
 
 params:
   description: Description of my new site.
